--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,58 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700&display=swap');
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !important;
+    /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif; */
+    font-family: 'Red Hat Display', sans-serif;
 }
 
-.hello-title {
-    color: white;
+.hidden {
+    display: none !important;
 }
 
-.rainbow-transition {
-    animation: rainbow-bg 20s linear;
-    animation-iteration-count: infinite;
+.hidden-opacity {
+    opacity: 0 !important;
 }
 
 .centered-text {
     vertical-align: middle;
     text-align: center;
     transform: translate(-50%, -50%);
-}
-
-@keyframes rainbow-bg {
-    100%,
-    0% {
-        background-color: rgb(255, 0, 0);
-    }
-    8% {
-        background-color: rgb(255, 127, 0);
-    }
-    16% {
-        background-color: rgb(255, 255, 0);
-    }
-    25% {
-        background-color: rgb(127, 255, 0);
-    }
-    33% {
-        background-color: rgb(0, 255, 0);
-    }
-    41% {
-        background-color: rgb(0, 255, 127);
-    }
-    50% {
-        background-color: rgb(0, 255, 255);
-    }
-    58% {
-        background-color: rgb(0, 127, 255);
-    }
-    66% {
-        background-color: rgb(0, 0, 255);
-    }
-    75% {
-        background-color: rgb(127, 0, 255);
-    }
-    83% {
-        background-color: rgb(255, 0, 255);
-    }
-    91% {
-        background-color: rgb(255, 0, 127);
-    }
 }
